2001-06-11  Glynn Foster  <glynn.foster@sun.com>

	Right I've had enough of this stinking 'warner' thing
	so I've removed about 99% of the references in it. Also
	cleaned up the default.session to remove the Warner and
	Chooser sessions - they are totally pointless now. This 
	also [quite by accident I assure you :)] fixes a bug
	#54843]  
	Removed stuff from the following -
	* command.c: (command)
	* default.in
	* headers.h
	* manager.c: (no_response_warning), (new_client)
	* session-properties-capplet.c: (main)
	* session-properties.c: (main)

2001-06-05  Christian Rose  <menthos@menthos.com>

	* session-properties.desktop: Added Swedish translation.
	* session.desktop: Modified Swedish translation.

Thu May 31 00:43:59 2001  George Lebl <jirka@5z.com>

	* splash.c: make dark half transparent rectangle behind the text as
	  the shadow, this makes the text completely readable even with a
	  light splashscreen.c (like we have now)

2001-05-30  Glynn Foster  <glynn.foster@sun.com>

	* headers.h: Added FAILSAFE_SESSION #def - mostly useless
	* main.c: (main): Removed setting of CurrentSession - the 
	  hack that was put in for gdm which killed the concept of 
	  multiple concurrent sessions. If in failsafe mode, make 
	  sure we just load Default from default.session only...even
	  if the session is called Failsafe for now - in theory we
	  should have a Failsafe session in default.session but for
	  the moment Default will do.
	* save.c: (read_session): Make sure we load Failsafe [ie.
	  Default] from default.session only...

	* gsm/*.[ch] - Man, this stuff is confusing...

2001-05-27  Stanislav Brabec  <utx@penguin.cz>

	* save-session.desktop, session-properties.desktop: Added
	comment; these desktops are used also in apps directory, so
	they should have comment (if item is dragged to panel, it's
	only text description).

2001-05-23  jacob berkman  <jacob@ximian.com>

	* splash.c: make nautilus use desktop icon

Thu May 10 19:06:12 2001  George Lebl <jirka@5z.com>